--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv=”X-UA-Compatible” content=”IE=edge”>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link  href="styles.css" rel="stylesheet">
-    <title>Todolist</title>
+    <title>WeatherApplication</title>
 </head>
 <body>
     <div class="container">
